--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,78 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"Datasets/BooksDataset.csv\")\n",
-    "df_clean = pd.read_csv(\"Datasets/BooksDatasetClean.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.shape, df_clean.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns, df_clean.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"Category\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wdf = df_clean.copy()\n",
-    "wdf[\"Description\"] = wdf[\"Description\"].fillna(wdf[\"Category\"])\n",
-    "wdf[\"Description\"] = wdf[\"Description\"].fillna(wdf[\"Title\"])\n",
-    "wdf[\"Category\"] = wdf[\"Category\"].fillna(\"\")"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -82,39 +16,160 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import MultiLabelBinarizer\n",
-    "\n",
-    "wdf['Category_list'] = wdf['Category'].str.split(' , ')\n",
-    "wdf['Category_list'] = wdf['Category_list'].apply(lambda arr: [s.strip() for s in arr])\n"
+    "dataset = pd.read_csv(\"Datasets/BooksDatasetClean.csv\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "wdf.head()"
+    "### Simply preprocess for dataset\n",
+    "\n",
+    "- Fill in some missing values\n",
+    "- Split all categories into separate columns of categories\n",
+    "- Delete redundant columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Description</th>\n",
+       "      <th></th>\n",
+       "      <th>17th Century</th>\n",
+       "      <th>18th Century</th>\n",
+       "      <th>19th Century</th>\n",
+       "      <th>20th Century</th>\n",
+       "      <th>21st Century</th>\n",
+       "      <th>A+</th>\n",
+       "      <th>ACT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>XML</th>\n",
+       "      <th>Yearbooks &amp; Annuals</th>\n",
+       "      <th>Yiddish</th>\n",
+       "      <th>Yoga</th>\n",
+       "      <th>Young Adult Fiction</th>\n",
+       "      <th>Young Adult Nonfiction</th>\n",
+       "      <th>Youth</th>\n",
+       "      <th>Zen</th>\n",
+       "      <th>Zoology</th>\n",
+       "      <th>Zoos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Goat Brothers</td>\n",
+       "      <td>History , General</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 2005 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Title         Description     17th Century  18th Century  \\\n",
+       "0  Goat Brothers   History , General  0             0             0   \n",
+       "\n",
+       "   19th Century  20th Century  21st Century  A+  ACT  ...  XML  \\\n",
+       "0             0             0             0   0    0  ...    0   \n",
+       "\n",
+       "   Yearbooks & Annuals  Yiddish  Yoga  Young Adult Fiction  \\\n",
+       "0                    0        0     0                    0   \n",
+       "\n",
+       "   Young Adult Nonfiction  Youth  Zen  Zoology  Zoos  \n",
+       "0                       0      0    0        0     0  \n",
+       "\n",
+       "[1 rows x 2005 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Create new preprocessed dataset\n",
+    "preprocessed_dataset = dataset.copy()\n",
     "\n",
-    "mlb = MultiLabelBinarizer()\n",
-    "encoded_categories = mlb.fit_transform(wdf['Category_list'])\n",
+    "# Fill missing values\n",
+    "preprocessed_dataset[\"Description\"] = preprocessed_dataset[\"Description\"].fillna(preprocessed_dataset[\"Category\"])\n",
+    "preprocessed_dataset[\"Description\"] = preprocessed_dataset[\"Description\"].fillna(preprocessed_dataset[\"Title\"])\n",
+    "preprocessed_dataset[\"Category\"] = preprocessed_dataset[\"Category\"].fillna(\"\")\n",
     "\n",
-    "encoded_df = pd.DataFrame(encoded_categories, columns=mlb.classes_)\n",
+    "# Split categories into a list\n",
+    "preprocessed_dataset['Category_list'] = preprocessed_dataset['Category'].str.split(' , ')\n",
+    "preprocessed_dataset['Category_list'] = preprocessed_dataset['Category_list'].apply(lambda arr: [s.strip() for s in arr])\n",
     "\n",
-    "wdf = pd.concat([wdf, encoded_df], axis=1)\n"
+    "# Split list category into different columns\n",
+    "exploded = preprocessed_dataset.explode('Category_list')\n",
+    "dummies = pd.get_dummies(exploded['Category_list'])\n",
+    "preprocessed_dataset = preprocessed_dataset.join(dummies.groupby(exploded.index).sum())\n",
+    "\n",
+    "# Drop unnecessary columns\n",
+    "preprocessed_dataset.drop(columns=['Authors', 'Category', 'Category_list', 'Publisher',\n",
+    "                                    'Price Starting With ($)', 'Publish Date (Month)', 'Publish Date (Year)'], inplace=True)\n",
+    "\n",
+    "# Show new dataset\n",
+    "preprocessed_dataset.head(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup embeddings producer\n",
+    "\n",
+    "- Import libraries\n",
+    "- Setup torch and BERT\n",
+    "- Create embeddings producer function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,31 +177,22 @@
     "import random\n",
     "import torch\n",
     "from transformers import BertTokenizer, BertModel\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
-    "\n",
-    "# Set a random seed\n",
+    "# Setup torch\n",
     "random_seed = 42\n",
     "random.seed(random_seed)\n",
-    "\n",
-    "# Set a random seed for PyTorch (for GPU as well)\n",
     "torch.manual_seed(random_seed)\n",
     "if torch.cuda.is_available():\n",
     "    torch.cuda.manual_seed_all(random_seed)\n",
-    "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
     "# Load BERT tokenizer and model\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
-    "model = BertModel.from_pretrained('bert-base-uncased').to(device)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def product_text_embedding(text):\n",
+    "model = BertModel.from_pretrained('bert-base-uncased').to(device)\n",
+    "\n",
+    "\n",
+    "# Define function to get text embedding\n",
+    "def produce_text_embedding(text):\n",
     "    encoding = tokenizer.batch_encode_plus(\n",
     "        [text],\n",
     "        padding=True,              \n",
@@ -164,13 +210,19 @@
     "\n",
     "    sentence_embedding = word_embeddings.mean(dim=1)\n",
     "\n",
-    "    return sentence_embedding.cpu() \n",
-    "\n",
-    "\n",
-    "text = \"Check working\"\n",
-    "\n",
-    "\n",
-    "product_text_embedding(text).shape"
+    "    return sentence_embedding.cpu() \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to produce all embeddings\n",
+    "- Never tested\n",
+    "- Probably needs optimization\n",
+    "- Has to save intermediate results\n",
+    "- Has to have ability to start from arbitrary point\n",
+    "- Saving in numpy format has to be provided"
    ]
   },
   {
@@ -179,32 +231,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_df = wdf.copy()\n",
-    "\n",
-    "exp_df = exp_df.drop(columns=['Authors', 'Category', 'Category_list', 'Publisher', 'Price Starting With ($)', 'Publish Date (Month)', 'Publish Date (Year)'])\n",
-    "\n",
-    "exp_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "import numpy as np\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
     "def create_new_dataframe(df):\n",
     "    new_df = pd.DataFrame()\n",
     "    numerical_cols = df.select_dtypes(include=np.number).columns\n",
     "\n",
     "    length = df.shape[0]\n",
     "    for index, row in df.iterrows():\n",
-    "        vector = product_text_embedding(row['Description']).reshape(768)\n",
+    "        vector = produce_text_embedding(row['Description']).reshape(768)\n",
     "\n",
     "        numerical_values = row[numerical_cols].values\n",
     "        name = row['Title']\n",
@@ -218,37 +251,17 @@
     "\n",
     "        print(f'Progress: {index / length:.2%}', end='\\r')\n",
     "\n",
-    "    return new_df\n",
-    "\n",
-    "\n",
-    "\n",
-    "def parse_embedding(embedding_str):\n",
-    "    \"\"\"Convert the string of comma-separated floats into a NumPy array.\"\"\"\n",
-    "    return np.array([float(x) for x in embedding_str.split(',')])\n",
-    "\n",
-    "def find_closest_records(record, new_df, n=5):\n",
-    "    record_vector = parse_embedding(record['book_embedding']).reshape(1, -1)\n",
-    "\n",
-    "    distances = []\n",
-    "    names = []\n",
-    "\n",
-    "    length = new_df.shape[0]\n",
-    "    for index, row in new_df.iterrows():\n",
-    "        other_vector = parse_embedding(row['book_embedding']).reshape(1, -1)\n",
-    "\n",
-    "        similarity = cosine_similarity(record_vector, other_vector)[0][0]\n",
-    "\n",
-    "        distance = 1 - similarity\n",
-    "\n",
-    "        distances.append(distance)\n",
-    "        names.append(row['name'])\n",
-    "        \n",
-    "        print(f'Progress: {index / length:.2%}', end='\\r')\n",
-    "\n",
-    "    sorted_indices = sorted(range(len(distances)), key=lambda k: distances[k])\n",
-    "    closest_names = [names[i] for i in sorted_indices[:n]]\n",
-    "\n",
-    "    return closest_names"
+    "    return new_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing numpy vectors\n",
+    "- Imports numpy matrix. Also such matrix has to be saved by previous method\n",
+    "- Consists of all books in dataframe\n",
+    "- For each vector first element is the book name, others are embedding"
    ]
   },
   {
@@ -257,16 +270,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df = create_new_dataframe(exp_df)"
+    "dataset = np.load(\"./Datasets/books_embeddings.npy\", allow_pickle= True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get most similar vectors in the dataset\n",
+    "\n",
+    "- So far only finds itself. kinda enough"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "record vector [[0.012158381752669811 0.12222578376531601 -0.3661309778690338 ... 0 0 0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Goat Brothers']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "new_df.head()"
+    "def cosine_similarity(a, b):\n",
+    "    l2a = 0\n",
+    "    l2b = 0\n",
+    "    scalarMultiplication = 0\n",
+    "    for i in range(1, a.shape[0]):\n",
+    "        scalarMultiplication += a[i] * b[i]\n",
+    "        l2a += a[i] ** 2\n",
+    "        l2b += b[i] ** 2\n",
+    "\n",
+    "    l2a = np.sqrt(l2a) + 0.0001\n",
+    "    l2b = np.sqrt(l2b) + 0.0001\n",
+    "\n",
+    "    return 1 - scalarMultiplication / (l2a * l2b)\n",
+    "\n",
+    "def find_closest_records(record, df, n=5):\n",
+    "    record_vector = (record[1:]).reshape(1,-1)\n",
+    "    print(\"record vector\", record_vector)\n",
+    "    data_matrix = df[:, 1:].astype(np.float64)\n",
+    "    all_names = df[:,0]\n",
+    "    similiraties = cosine_similarity(record_vector, data_matrix).flatten()\n",
+    "    distances = 1 - similiraties\n",
+    "    sorted_indeces = np.argsort(distances)[:n]\n",
+    "    names = all_names[sorted_indeces]\n",
+    "    return list(names)\n",
+    "\n",
+    "find_closest_records(dataset[0], dataset, n=10)"
    ]
   },
   {
@@ -284,40 +349,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "2771 * 103063 / 1000000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_df.to_csv('books_embeddings.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_df = pd.read_csv(\"new_df.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "find_closest_records(load_df.iloc[0], load_df, n=10)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "book-recsys",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
