changed baseline and py code used in website to numpy

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"Datasets/BooksDataset.csv\")\n",
-    "df_clean = pd.read_csv(\"Datasets/BooksDatasetClean.csv\")"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -25,96 +16,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.shape, df_clean.shape"
+    "dataset = pd.read_csv(\"BooksDatasetClean.csv\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df.columns, df_clean.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"Category\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wdf = df_clean.copy()\n",
-    "wdf[\"Description\"] = wdf[\"Description\"].fillna(wdf[\"Category\"])\n",
-    "wdf[\"Description\"] = wdf[\"Description\"].fillna(wdf[\"Title\"])\n",
-    "wdf[\"Category\"] = wdf[\"Category\"].fillna(\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "### Simply preprocess for dataset\n",
     "\n",
-    "wdf['Category_list'] = wdf['Category'].str.split(' , ')\n",
-    "wdf['Category_list'] = wdf['Category_list'].apply(lambda arr: [s.strip() for s in arr])\n"
+    "- Fill in some missing values\n",
+    "- Split all categories into separate columns of categories\n",
+    "- Delete redundant columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wdf.head()"
+    "# Create new preprocessed dataset\n",
+    "preprocessed_dataset = dataset.copy()\n",
+    "\n",
+    "# Fill missing values\n",
+    "preprocessed_dataset[\"Description\"] = preprocessed_dataset[\"Description\"].fillna(preprocessed_dataset[\"Category\"])\n",
+    "preprocessed_dataset[\"Description\"] = preprocessed_dataset[\"Description\"].fillna(preprocessed_dataset[\"Title\"])\n",
+    "preprocessed_dataset[\"Category\"] = preprocessed_dataset[\"Category\"].fillna(\"\")\n",
+    "\n",
+    "# Split categories into a list\n",
+    "preprocessed_dataset['Category_list'] = preprocessed_dataset['Category'].str.split(' , ')\n",
+    "preprocessed_dataset['Category_list'] = preprocessed_dataset['Category_list'].apply(lambda arr: [s.strip() for s in arr])\n",
+    "\n",
+    "# Split list category into different columns\n",
+    "exploded = preprocessed_dataset.explode('Category_list')\n",
+    "dummies = pd.get_dummies(exploded['Category_list'])\n",
+    "preprocessed_dataset = preprocessed_dataset.join(dummies.groupby(exploded.index).sum())\n",
+    "\n",
+    "# Drop unnecessary columns\n",
+    "preprocessed_dataset.drop(columns=['Authors', 'Category', 'Category_list', 'Publisher',\n",
+    "                                    'Price Starting With ($)', 'Publish Date (Month)', 'Publish Date (Year)'], inplace=True)\n",
+    "\n",
+    "# Show new dataset\n",
+    "preprocessed_dataset.head(1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "### Setup embeddings producer\n",
     "\n",
-    "mlb = MultiLabelBinarizer()\n",
-    "encoded_categories = mlb.fit_transform(wdf['Category_list'])\n",
-    "\n",
-    "encoded_df = pd.DataFrame(encoded_categories, columns=mlb.classes_)\n",
-    "\n",
-    "wdf = pd.concat([wdf, encoded_df], axis=1)\n"
+    "- Import libraries\n",
+    "- Setup torch and BERT\n",
+    "- Create embeddings producer function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,31 +82,22 @@
     "import random\n",
     "import torch\n",
     "from transformers import BertTokenizer, BertModel\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
-    "\n",
-    "# Set a random seed\n",
+    "# Setup torch\n",
     "random_seed = 42\n",
     "random.seed(random_seed)\n",
-    "\n",
-    "# Set a random seed for PyTorch (for GPU as well)\n",
     "torch.manual_seed(random_seed)\n",
     "if torch.cuda.is_available():\n",
     "    torch.cuda.manual_seed_all(random_seed)\n",
-    "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
     "# Load BERT tokenizer and model\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
-    "model = BertModel.from_pretrained('bert-base-uncased').to(device)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def product_text_embedding(text):\n",
+    "model = BertModel.from_pretrained('bert-base-uncased').to(device)\n",
+    "\n",
+    "\n",
+    "# Define function to get text embedding\n",
+    "def produce_text_embedding(text):\n",
     "    encoding = tokenizer.batch_encode_plus(\n",
     "        [text],\n",
     "        padding=True,              \n",
@@ -164,13 +115,19 @@
     "\n",
     "    sentence_embedding = word_embeddings.mean(dim=1)\n",
     "\n",
-    "    return sentence_embedding.cpu() \n",
-    "\n",
-    "\n",
-    "text = \"Check working\"\n",
-    "\n",
-    "\n",
-    "product_text_embedding(text).shape"
+    "    return sentence_embedding.cpu() \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to produce all embeddings\n",
+    "- Never tested\n",
+    "- Probably needs optimization\n",
+    "- Has to save intermediate results\n",
+    "- Has to have ability to start from arbitrary point\n",
+    "- Saving in numpy format has to be provided"
    ]
   },
   {
@@ -179,76 +136,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_df = wdf.copy()\n",
-    "\n",
-    "exp_df = exp_df.drop(columns=['Authors', 'Category', 'Category_list', 'Publisher', 'Price Starting With ($)', 'Publish Date (Month)', 'Publish Date (Year)'])\n",
-    "\n",
-    "exp_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "import numpy as np\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
     "def create_new_dataframe(df):\n",
-    "    new_df = pd.DataFrame()\n",
     "    numerical_cols = df.select_dtypes(include=np.number).columns\n",
-    "\n",
+    "    combined_data = []\n",
     "    length = df.shape[0]\n",
     "    for index, row in df.iterrows():\n",
-    "        vector = product_text_embedding(row['Description']).reshape(768)\n",
+    "        vector = produce_text_embedding(row['Description']).reshape(768)\n",
     "\n",
     "        numerical_values = row[numerical_cols].values\n",
     "        name = row['Title']\n",
     "\n",
     "        combined_vector = np.concatenate((vector, numerical_values))\n",
     "\n",
-    "        vector_str = ','.join(map(str, combined_vector))\n",
+    "        combined_row = np.append(name, combined_vector)\n",
     "\n",
-    "        new_row = pd.DataFrame({'book_embedding': [vector_str], 'name': [name]})\n",
-    "        new_df = pd.concat([new_df, new_row], ignore_index=True)\n",
-    "\n",
+    "        combined_data.append(combined_row)\n",
     "        print(f'Progress: {index / length:.2%}', end='\\r')\n",
     "\n",
-    "    return new_df\n",
+    "    combined_array = np.array(combined_data, dtype=object) \n",
     "\n",
-    "\n",
-    "\n",
-    "def parse_embedding(embedding_str):\n",
-    "    \"\"\"Convert the string of comma-separated floats into a NumPy array.\"\"\"\n",
-    "    return np.array([float(x) for x in embedding_str.split(',')])\n",
-    "\n",
-    "def find_closest_records(record, new_df, n=5):\n",
-    "    record_vector = parse_embedding(record['book_embedding']).reshape(1, -1)\n",
-    "\n",
-    "    distances = []\n",
-    "    names = []\n",
-    "\n",
-    "    length = new_df.shape[0]\n",
-    "    for index, row in new_df.iterrows():\n",
-    "        other_vector = parse_embedding(row['book_embedding']).reshape(1, -1)\n",
-    "\n",
-    "        similarity = cosine_similarity(record_vector, other_vector)[0][0]\n",
-    "\n",
-    "        distance = 1 - similarity\n",
-    "\n",
-    "        distances.append(distance)\n",
-    "        names.append(row['name'])\n",
-    "        \n",
-    "        print(f'Progress: {index / length:.2%}', end='\\r')\n",
-    "\n",
-    "    sorted_indices = sorted(range(len(distances)), key=lambda k: distances[k])\n",
-    "    closest_names = [names[i] for i in sorted_indices[:n]]\n",
-    "\n",
-    "    return closest_names"
+    "    return combined_array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing numpy vectors\n",
+    "- Imports numpy matrix. Also such matrix has to be saved by previous method\n",
+    "- Consists of all books in dataframe\n",
+    "- For each vector first element is the book name, others are embedding"
    ]
   },
   {
@@ -257,7 +174,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df = create_new_dataframe(exp_df)"
+    "dataset = np.load(\"books_embeddings.npy\", allow_pickle= True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get most similar vectors in the dataset\n"
    ]
   },
   {
@@ -266,7 +190,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df.head()"
+    "def find_closest_records(record, df, n=5):\n",
+    "    record_vector = (record[1:]).astype(np.float64).reshape(1,-1)\n",
+    "    record_vector = torch.from_numpy(record_vector)\n",
+    "    data_matrix =(df[:, 1:].astype(np.float64))\n",
+    "    data_matrix = torch.from_numpy(data_matrix)\n",
+    "    all_names = df[:,0]\n",
+    "    distances = 1 - (torch.cosine_similarity(record_vector, data_matrix))\n",
+    "    sorted_indeces = np.argsort(distances)[:n]\n",
+    "    names = all_names[sorted_indeces]\n",
+    "    return list(names)"
    ]
   },
   {
@@ -275,43 +208,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df['book_embedding'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2771 * 103063 / 1000000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_df.to_csv('books_embeddings.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_df = pd.read_csv(\"new_df.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "find_closest_records(load_df.iloc[0], load_df, n=10)"
+    "print(dataset[1000])\n",
+    "find_closest_records(dataset[1000], dataset, n=20)"
    ]
   }
  ],
@@ -331,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
