--- a/experiments/evaluations.ipynb
+++ b/experiments/evaluations.ipynb
@@ -55,10 +55,11 @@
     "\n",
     "\n",
     "k = 1000\n",
-    "recs_path = os.path.join(PROJECT_ROOT, \"data/test_data/data.json\")\n",
+    "recs_path = os.path.join(PROJECT_ROOT, \"data/test_data/tests.json\")\n",
     "model_path = os.path.join(PROJECT_ROOT, \"data/embeddings/books_embeddings_dataset.npy\")\n",
+    "dataset_path = os.path.join(PROJECT_ROOT, \"data/raw_data/LEHABOOKS.csv\")\n",
     "model = BookDescriptionEmbeddingSimilarity(model_path)\n",
-    "recs = RecallKTitles(k, recs_path, model)\n",
+    "recs = RecallKTitles(k, recs_path, model, dataset_path)\n",
     "recs.evaluate()"
    ]
   }
