change code structure a bit

--- a/experiments/graph.ipynb
+++ b/experiments/graph.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,32 +35,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\git\\Book-RecSys\\data/graphs/book_graph.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "from networkx.readwrite import json_graph\n",
     "\n",
-    "graph_path =  os.path.join(PROJECT_ROOT,\"data/graphs/book_graph.json\")\n",
-    "print(graph_path)\n",
-    "with open(graph_path, \"r\") as f:\n",
-    "    graph_data = json.load(f)\n",
+    "def load_graph(relative_path) :\n",
+    "    graph_path =  os.path.join(PROJECT_ROOT, relative_path)\n",
+    "    with open(graph_path, \"r\") as f:\n",
+    "        graph_data = json.load(f)\n",
     "\n",
-    "Graph = json_graph.node_link_graph(graph_data)"
+    "    Graph = json_graph.node_link_graph(graph_data)\n",
+    "    return Graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,12 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_graph(graph):\n",
-    "    save_path =  os.path.join(PROJECT_ROOT,\"data/graphs/book_graph.json\")\n",
+    "def save_graph(graph, relative_path):\n",
+    "    save_path =  os.path.join(PROJECT_ROOT, relative_path)\n",
     "    graph_data = json_graph.node_link_data(graph)\n",
     "    with open(save_path, \"w\") as f:\n",
     "        json.dump(graph_data, f, indent=4)"
@@ -145,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,11 +156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_records_graph(title, n=10, bonus=1.2):\n",
+    "    Graph = load_graph(\"data/graphs/book_graph.json\")\n",
     "    predicted = model.recommend_by_title(title, n=68945)  \n",
     "    predicted_graph = set(find_neighbors_title(Graph, title))  \n",
     "    book_scores = {}  \n",
@@ -184,28 +178,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Atlas Shrugged', np.float32(1.119403)), ('1984', np.float32(1.1171799)), ('Anthem', np.float32(1.1079644)), ('Animal Farm', np.float32(1.102549)), (\"Orwell's Nineteen Eighty-four\", np.float32(1.0917437)), ('Island', np.float32(1.0888231)), ('Nineteen Eighty-four', np.float32(1.0863512)), ('Night of January 16th', np.float32(1.0862842)), ('The Fountainhead', np.float32(1.0849706)), ('Modern Classics One Day In The Life Of Ivan Denisovich', np.float32(1.0800008))]\n"
+      "[('We', np.float32(1.1027404)), ('Animal Farm', np.float32(1.0987049)), (\"Snowball's Chance\", np.float32(1.094665)), (\"Orwell's Nineteen Eighty-four\", np.float32(1.0945809)), ('The Middle Stories', np.float32(1.08216)), ('Into the Forest', np.float32(1.0791802)), ('Mil novecientos ochenta y cuatro', np.float32(1.078745)), ('That Hideous Strength', np.float32(1.0694191)), ('Rebelión en la Granja', np.float32(1.0563898)), ('Mother Night', np.float32(1.0374453))]\n"
      ]
     }
    ],
    "source": [
-    "print(get_records_graph(\"We\", n = 10))"
+    "print(get_records_graph(\"1984\", n = 10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_all_nodes():\n",
+    "def print_all_nodes(Graph):\n",
     "    for node in Graph.nodes():\n",
     "        if len(list(Graph.neighbors(node))) > 0: \n",
     "            print(f\"{node} references: {list(Graph.neighbors(node))}\")"
