Changes in recall and explore new dataset

--- a/experiments/ss_dataset/second_semester_dataset_exploration.ipynb
+++ b/experiments/ss_dataset/second_semester_dataset_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,23 +10,109 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "PROJECT_ROOT = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "PROJECT_ROOT = os.path.abspath(os.path.join(os.getcwd(), \"..\", \"..\"))\n",
     "if PROJECT_ROOT not in sys.path:\n",
     "    sys.path.insert(0, PROJECT_ROOT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_PATH = os.path.join(PROJECT_ROOT, \"data\", \"raw_data\", \"kaggle_second_sem\")\n",
     "PATH_BOOKS = os.path.join(DATA_PATH, \"books_data.csv\")\n",
     "PATH_RATINGS = os.path.join(DATA_PATH, \"books_rating.csv\")\n",
+    "PATH_LETOV = os.path.join(PROJECT_ROOT, \"data\", \"raw_data\", \"LEHABOOKS.csv\")\n",
     "\n",
     "df_books = pd.read_csv(PATH_BOOKS)\n",
-    "df_ratings = pd.read_csv(PATH_RATINGS)"
+    "df_ratings = pd.read_csv(PATH_RATINGS)\n",
+    "df_letov = pd.read_csv(PATH_LETOV)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Title', 'description', 'authors', 'image', 'previewLink', 'publisher',\n",
+      "       'publishedDate', 'infoLink', 'categories', 'ratingsCount'],\n",
+      "      dtype='object')\n",
+      "Index(['Title', 'Authors', 'Description', 'Category', 'Publisher', 'Publish'], dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((212404, 10), (68944, 6))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(df_books.columns)\n",
+    "print( df_letov.columns)\n",
+    "\n",
+    "df_books.shape, df_letov.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Title             object\n",
+       "description       object\n",
+       "authors           object\n",
+       "image             object\n",
+       "previewLink       object\n",
+       "publisher         object\n",
+       "publishedDate     object\n",
+       "infoLink          object\n",
+       "categories        object\n",
+       "ratingsCount     float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_books.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15700\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_letov[\"Title\"] = df_letov[\"Title\"].str.lower()\n",
+    "df_books[\"Title\"] = df_books[\"Title\"].str.lower()\n",
+    "\n",
+    "intersection_count = df_letov[\"Title\"].isin(df_books[\"Title\"]).sum()\n",
+    "print(intersection_count)\n"
    ]
   },
   {
