add module with graph recs

--- a/experiments/graph.ipynb
+++ b/experiments/graph.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.models.modules import BookDescriptionEmbeddingSimilarity\n",
+    "\n",
+    "import networkx as nx\n",
+    "import pandas as pd\n",
+    "\n",
+    "dataset_path =  os.path.join(PROJECT_ROOT,\"data/raw_data/LEHABOOKS.csv\")\n",
+    "dataset = pd.read_csv(dataset_path)\n",
     "\n",
     "model_path = os.path.join(PROJECT_ROOT, \"data/embeddings/books_embeddings_dataset.npy\")\n",
     "model = BookDescriptionEmbeddingSimilarity(model_path)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load graph from json format"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,26 +65,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Build the graph based on author's references"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "import pandas as pd\n",
-    "\n",
-    "dataset_path =  os.path.join(PROJECT_ROOT,\"data/raw_data/LEHABOOKS.csv\")\n",
-    "dataset = pd.read_csv(dataset_path)\n",
-    "G = nx.Graph()\n",
-    "\n",
-    "books = dataset.to_dict(orient=\"records\")\n",
-    "\n",
-    "book_lookup = {f\"{book['Title']} ({book['Authors']})\": book for book in books}\n",
-    "\n",
-    "for book in books:\n",
-    "    book_id = f\"{book['Title']} ({book['Authors']})\"\n",
-    "    G.add_node(book_id, data=book)  \n",
-    "\n",
     "def find_references_author(description, books, current_book):\n",
     "    references = []\n",
     "\n",
@@ -85,13 +90,38 @@
     "        if book_id != current_book:\n",
     "            if author in description:  \n",
     "                references.append(book_id) \n",
+    "    return references\n",
     "\n",
-    "    return references"
+    "def build_graph():\n",
+    "    G = nx.Graph()\n",
+    "    books = dataset.to_dict(orient=\"records\")\n",
+    "    book_lookup = {f\"{book['Title']} ({book['Authors']})\": book for book in books}\n",
+    "\n",
+    "    for book in books:\n",
+    "        book_id = f\"{book['Title']} ({book['Authors']})\"\n",
+    "        G.add_node(book_id, data=book)  \n",
+    "\n",
+    "    for book in books:\n",
+    "        current_book = f\"{book['Title']} ({book['Authors']})\"\n",
+    "        description = book['Description']\n",
+    "        references = find_references_author(description, books, current_book)\n",
+    "\n",
+    "        for ref in references:\n",
+    "            if ref in book_lookup:\n",
+    "                G.add_edge(current_book, ref)\n",
+    "    return G"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find references by titles(or try to)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,8 +167,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find neighbours of book by its title"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,46 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_records_graph(title, n=10, bonus=1.2):\n",
-    "    Graph = load_graph(\"data/graphs/book_graph.json\")\n",
-    "    predicted = model.recommend_by_title(title, n=68945)  \n",
-    "    predicted_graph = set(find_neighbors_title(Graph, title))  \n",
-    "    book_scores = {}  \n",
-    "\n",
-    "    for book, score in predicted:\n",
-    "        adjusted_score = score * bonus if book in predicted_graph else score\n",
-    "        if book not in book_scores or adjusted_score > book_scores[book]:\n",
-    "            book_scores[book] = adjusted_score \n",
-    "\n",
-    "    sorted_books = sorted(book_scores.items(), key=lambda x: x[1], reverse=True)\n",
-    "\n",
-    "    return sorted_books[:n]  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('We', np.float32(1.1027404)), ('Animal Farm', np.float32(1.0987049)), (\"Snowball's Chance\", np.float32(1.094665)), (\"Orwell's Nineteen Eighty-four\", np.float32(1.0945809)), ('The Middle Stories', np.float32(1.08216)), ('Into the Forest', np.float32(1.0791802)), ('Mil novecientos ochenta y cuatro', np.float32(1.078745)), ('That Hideous Strength', np.float32(1.0694191)), ('Rebelión en la Granja', np.float32(1.0563898)), ('Mother Night', np.float32(1.0374453))]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(get_records_graph(\"1984\", n = 10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +201,135 @@
     "    for node in Graph.nodes():\n",
     "        if len(list(Graph.neighbors(node))) > 0: \n",
     "            print(f\"{node} references: {list(Graph.neighbors(node))}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the books that have the biggest number of common neighbours with a given book"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_most_neighbors(Graph, title, n = 10):\n",
+    "    neighbors = set(find_neighbors_title(Graph, title))\n",
+    "    shared_neighbors = {b: len(neighbors & set(find_neighbors_title(Graph, b))) for b in neighbors}\n",
+    "    sorted_neighbors = sorted(shared_neighbors.items(), key=lambda x: x[1], reverse=True)\n",
+    "    return sorted_neighbors[:n]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find closest books(embeddings + shared neighbours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def find_closest_books(title, n = 20):\n",
+    "    Graph = load_graph(\"data/graphs/book_graph.json\")\n",
+    "\n",
+    "    predicted = model.recommend_by_title(title, n + 1)  \n",
+    "\n",
+    "    neighbors = find_neighbors_title(Graph, title)\n",
+    "\n",
+    "    embedding = None\n",
+    "    for i in model.model:\n",
+    "        if i[0] == title:  \n",
+    "            embedding = np.array(i[1:], dtype=np.float32)\n",
+    "            break\n",
+    "\n",
+    "    if embedding is None:\n",
+    "        raise ValueError(f\"Title '{title}' not found in the model.\")\n",
+    "\n",
+    "    neighbor_scores = {}\n",
+    "    for neighbor in neighbors:\n",
+    "        if neighbor == title: \n",
+    "            continue\n",
+    "\n",
+    "        neighbor_embedding = None\n",
+    "        for i in model.model:\n",
+    "            if i[0] == neighbor:  \n",
+    "                neighbor_embedding = np.array(i[1:], dtype=np.float32)\n",
+    "                break\n",
+    "\n",
+    "        if neighbor_embedding is None:\n",
+    "            continue \n",
+    "\n",
+    "        norm_embedding = np.linalg.norm(embedding)\n",
+    "        norm_neighbor = np.linalg.norm(neighbor_embedding)\n",
+    "        similarity = np.dot(embedding, neighbor_embedding) / (norm_embedding * norm_neighbor) if norm_embedding and norm_neighbor else 0\n",
+    "\n",
+    "        neighbor_scores[neighbor] = similarity\n",
+    "\n",
+    "    sorted_neighbors = sorted(neighbor_scores.items(), key=lambda x: -x[1])[:10]  \n",
+    "\n",
+    "    combined = {}\n",
+    "\n",
+    "    for book, score in predicted:\n",
+    "        if book != title:  \n",
+    "            combined[book] = score  \n",
+    "\n",
+    "    for book, similarity in sorted_neighbors:\n",
+    "        if book in combined:\n",
+    "            combined[book] = max(combined[book], similarity)  \n",
+    "        else:\n",
+    "            combined[book] = similarity  \n",
+    "\n",
+    "    sorted_books = sorted(combined.items(), key=lambda x: -x[1])\n",
+    "\n",
+    "    return [(book, score) for book, score in sorted_books[:n]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Superluminal', np.float32(0.95735115)),\n",
+       " ('Metaplanetary', np.float32(0.95497215)),\n",
+       " ('Moonwar H', np.float32(0.9478443)),\n",
+       " ('Vacuum Diagrams', np.float32(0.94667035)),\n",
+       " ('The Wreck of the River of Stars', np.float32(0.9449295)),\n",
+       " ('Prelude to Foundation', np.float32(0.9446789)),\n",
+       " ('Star Wars', np.float32(0.943509)),\n",
+       " ('Lost in Transmission', np.float32(0.9424872)),\n",
+       " ('Pebble in the Sky', np.float32(0.9411377)),\n",
+       " ('Excession', np.float32(0.9408336)),\n",
+       " (\"Foundation's Fear\", np.float32(0.94065976)),\n",
+       " ('The Ringworld Throne', np.float32(0.94043005)),\n",
+       " ('Souls in the Great Machine', np.float32(0.9403687)),\n",
+       " ('The Labyrinth Key', np.float32(0.94022304)),\n",
+       " ('The Stand', np.float32(0.93991613)),\n",
+       " (\"Infinity's Shore\", np.float32(0.93970543)),\n",
+       " ('Hyperion', np.float32(0.9396297)),\n",
+       " ('Dune: The Machine Crusade', np.float32(0.93862253)),\n",
+       " ('Atlas Shrugged', np.float32(0.91931033)),\n",
+       " ('1984', np.float32(0.9189502))]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_closest_books(\"We\")"
    ]
   }
  ],
